--- a/README
+++ b/README
@@ -1,3 +1,13 @@
+ #####                                                                    ###
+#     #    ##    #        ####   #    #  #       #    #     #     #####   ###
+#         #  #   #       #    #  #    #  #       #    #     #       #      #
+#        #    #  #       #       #    #  #       #    #     #       #     #
+#        ######  #       #       #    #  #       #    #     #       #
+#     #  #    #  #       #    #  #    #  #        #  #      #       #
+ #####   #    #  ######   ####    ####   ######    ##       #       #
+
+(super ce truc xD !! C'est la commande banner qui l'a fait (cf Linux in a Nutshell => Vraiment bien ce bouquain))
+---------------------------------------------------------------
 le readme du projet : 
 
 pour ajouter un truc (après la première fois) : 
@@ -7,9 +17,21 @@ pour ajouter un truc (après la première fois) :
   git push -u origin master
 (chez moi origin c'est "machin" parceque j'arrivais pas avec "origin" donc voila ... xD !
 
+---------------------------------------------------------------
+
+trucs à lire : 
+
+http://help.github.com/linux-set-up-git/
+
+http://alx.github.com/gitbook/3_usage_basique_des_branches_et_des_merges.html
+
+man gittutorial 
+
 
 
 ---------------------------------------------------------------
+Tuto pour la première fois :
+
 Global setup:
 
  Set up git
