--- a/projet/cahiercharges2.tex
+++ b/projet/cahiercharges2.tex
@@ -94,4 +94,41 @@ Le logiciel est capable de mémoriser le nom de l'utilisateur et ses résultats 
 
 Enfin, on peut mettre en place une table des records.
 
+
+   Contrainte technique
+Le langage utilisé sera le ijava compilé à l'aide de l'ap.jar conformément aux consignes données.
+
+  Contraintes de délai
+Le projet débute le 26 octobre par une présentation en cours du projet, nous devons ensuite constituer un cahier des charges et réaliser un logiciel qui ont respecctivements pour date d'échéance le 31 décembre et le 20 janvier.
+
+  Planification du projet
+ Présentation du projet en cours:
+Semaine1 (9 novembre/16 novembre):
+Recherche d'une idée de projet: Etude des programmes du CP au CE2, consultation de sites internet.
+
+Semaine2(16 novembre/23 novembre):
+discussion sur les différentes fonctionalités que le logiciel devra proposer, ainsi que ses limites.
+
+ Rendu de la page succinte dfe présentation du projet:
+Semaine3(23 novembre/30 novembre):
+Rédaction de l'introduction du cahier des charges et premier jet de le partie "description de la demande".
+
+Semaine4 (30 novembre/7 décembre):
+finalisation des deux premières parties du cahier des charges, début code visant à générer des opérations.
+
+Semaine5(7 décembre/14 décembre):
+finalisation des fonctions minimales du projet, premier jet de la suite du cahier des charges.
+
+Semaine6(14 décembre/21 décembre):
+finalisation du cahier des charges et débuts des tests des fonctions avancées.
+
+semaine7(2janvier/9 janvier):
+finalisation des fonctions avancées et début du mode graphique.
+
+Semaine8(9 janvier/16 janvier):
+finition du mode graphique et du logiciel dans sa globalité.
+
+  Analyse des données (description des données manipulées dans le logiciel et des principales opérations à effectuer sur ces données)
+
+
 \end{document}
